// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components | buttons should render the Button default 1`] = `
.c0 {
  background-color: transparent;
  padding: 10px;
  border-radius: 20px;
  text-transform: uppercase;
  font-weight: 600;
  font-size: 14px;
  border: 1px solid #d6d6d7;
  color: #31405c;
}

<div>
  <button
    class="c0"
  >
    Some text
  </button>
</div>
`;

exports[`components | buttons should render the Button with variant primary 1`] = `
.c0 {
  background-color: transparent;
  padding: 10px;
  border-radius: 20px;
  text-transform: uppercase;
  font-weight: 600;
  font-size: 14px;
  border: 1px solid #791abe;
  background-color: #791abe;
  color: #ffffff;
}

<div>
  <button
    class="c0"
  >
    Some text
  </button>
</div>
`;

exports[`components | buttons should render the cursor ponter when prop onClick is set 1`] = `
.c0 {
  background-color: transparent;
  padding: 10px;
  border-radius: 20px;
  text-transform: uppercase;
  font-weight: 600;
  font-size: 14px;
  cursor: pointer;
  border: 1px solid #d6d6d7;
  color: #31405c;
}

<div>
  <button
    class="c0"
  >
    Some text
  </button>
</div>
`;
